--- a/housel_minto/index.html
+++ b/housel_minto/index.html
@@ -93,7 +93,7 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
-  <li><a href="#the-connection-between-morgan-housel-and-barbara-minto" id="toc-the-connection-between-morgan-housel-and-barbara-minto" class="nav-link active" data-scroll-target="#the-connection-between-morgan-housel-and-barbara-minto">The connection between Morgan Housel and Barbara Minto</a></li>
+  <li><a href="#housel-as-the-best-student-of-minto" id="toc-housel-as-the-best-student-of-minto" class="nav-link active" data-scroll-target="#housel-as-the-best-student-of-minto">Housel as the best student of Minto</a></li>
   <li><a href="#why-his-writing-is-so-compelling" id="toc-why-his-writing-is-so-compelling" class="nav-link" data-scroll-target="#why-his-writing-is-so-compelling">Why his writing is so compelling</a></li>
   <li><a href="#housels-storytelling-style-in-action" id="toc-housels-storytelling-style-in-action" class="nav-link" data-scroll-target="#housels-storytelling-style-in-action">Housel’s storytelling style in action</a>
   <ul class="collapse">
@@ -105,6 +105,7 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#step-6-end-with-a-memorable-closing" id="toc-step-6-end-with-a-memorable-closing" class="nav-link" data-scroll-target="#step-6-end-with-a-memorable-closing">Step 6: End with a memorable closing</a></li>
   <li><a href="#combining-all-6-stepsparagraphs-into-a-final-story" id="toc-combining-all-6-stepsparagraphs-into-a-final-story" class="nav-link" data-scroll-target="#combining-all-6-stepsparagraphs-into-a-final-story">Combining all 6 steps/paragraphs into a final story</a></li>
   </ul></li>
+  <li><a href="#how-barbara-inspired-morgans-style" id="toc-how-barbara-inspired-morgans-style" class="nav-link" data-scroll-target="#how-barbara-inspired-morgans-style">How Barbara inspired Morgan’s style</a></li>
   </ul>
 </nav>
 </div>
@@ -116,9 +117,9 @@ ul.task-list li input[type="checkbox"] {
 
 
 
-<section id="the-connection-between-morgan-housel-and-barbara-minto" class="level1">
-<h1>The connection between Morgan Housel and Barbara Minto</h1>
-<p>I’m a trained management consultant, and in consulting we are taught the Minto Pyramid Principle - which helps us write more effectively and persuasively. Now, despite using this Minto approach to breakdown problems and write reports, I had never come across a renowned author, in the wilderness of every day life, who religiously used the pyramid principle. Not until I came across the books and articles of Morgan Housel.</p>
+<section id="housel-as-the-best-student-of-minto" class="level1">
+<h1>Housel as the best student of Minto</h1>
+<p>I’m a trained management consultant, and in my profession we are taught the Minto Pyramid Principle - which helps us write more effective and persuasive stories. Now, despite using this Minto approach to breakdown problems and write reports, I had never come across a renowned author, outside of consulting circles, who religiously used the pyramid principle. Not until I came across the books and articles of Morgan Housel.</p>
 </section>
 <section id="why-his-writing-is-so-compelling" class="level1">
 <h1>Why his writing is so compelling</h1>
@@ -231,6 +232,12 @@ ul.task-list li input[type="checkbox"] {
 </div>
 <hr>
 </section>
+</section>
+<section id="how-barbara-inspired-morgans-style" class="level1">
+<h1>How Barbara inspired Morgan’s style</h1>
+<p>Morgan Housel’s storytelling style adopts alot of Barbara Minto’s <strong>“Pyramid Principle”</strong>, particularly when it comes to structured, clear, and engaging communication.</p>
+<p>For instance, the <strong>S.C.Q. framework</strong> (Situation, Complication, Question) that Minto outlines is especially aligned with how Housel begins his stories.</p>
+<p>Let’s break this down:</p>
 </section>
 
 </main>
